--- a/qr.css
+++ b/qr.css
@@ -1,18 +1,25 @@
 body{
     margin:0;
     padding:0;
+    box-sizing: border-box;
     /* box-sizing: border-box; */
-    background:linear-gradient(rgb(248, 113, 136),rgb(116, 246, 116));
+    background:linear-gradient(76deg,rgba(97, 244, 255, 0.651),rgba(229, 102, 255, 0.664));
     background-repeat: no-repeat;
+    height: 100vh;
+    width: 100%;
 }
 .container{
     position:absolute;
-    top:40%;
-    left:40%;
-    margin:auto;
-    padding: 10px;
-    width:20%;
-    height:275px;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    /* padding: 10px; */
+    width:30%;
+    height:50%;
     /* box-sizing: border-box; */
     background-color: white;
     border: 2px solid black;
@@ -20,39 +27,60 @@ body{
     text-align: center;
 }
 label{
-    font-size: 16px;
-    
+    font-size: 1.5rem;
+    padding:  1px 5px;
+    margin:10px 0px;
+       
 }
-/* #text{ */
-p{
-    border:1px solid blue;
-    border-radius: 4px;
-    width:auto;
-    
-    margin:10px 0px 20px;
-    padding:5px 10px;
-    height: 20px;}
-/* } */
-#img{
 
-    height:100px;
-    width: 70px;
+#p{
+    
+    font-family: monospace;
+    border-bottom:1px solid rgba(50, 50, 201, 0.733);
+    border-radius: 4px;
+    padding:14px 10px;
+
+    width:80%;
+    margin-bottom:10px;
+    overflow:hidden;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+    text-align: left;
+    font-size: 22px;
+    outline:none;
+    background: #9999992d;
+    /* height: 20px; */
+}
+/* } */
+#imgbox{
+
+    height:55%;
+    /* width: %; */
     margin: 5px;
     padding:2px;
-    position:relative;
-    left:200px;
+    object-fit: contain;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+}
+#qrimg{
+    height: 100%;
+    /* width: 100%; */
+    border-radius: 4px;
+    /* border: 1px solid; */
+    z-index: 5;
 }
 
 #btn{
-    height:30px;
-    width:80%;
+    /* height:30px; */
+    padding: 5px 10px;
+    /* width:80%; */
     color:white;
     background-color:rgb(27, 166, 194);
-    border: 0;
-    margin-top: 10px;
+    border: none;
+    margin: 10px 1px;
     border-radius: 5px;
-    position: inherit;
-    bottom:5px;
-    left:22px;
+
 
 }
